--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>zp git test</title>
+  <meta name="description" content="zero plus gitコマンド練習">
 </head>
 <body>
   <header>
     <h1>git テスト</h1>
     <p>リモートが反映されたことを確認！</p>
+
   </header>
 </body>
 </html>
