zeroplusサイトへのリンク追加

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <header>
     <h1>git テスト</h1>
     <p>リモートが反映されたことを確認！</p>
-
+    <p><a href="https://zero-plus.io/" target="_blank">ZeroPlus｜フリーランス特化型プログラミングスクール</a></p>
   </header>
 </body>
 </html>
